--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,8 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux#latest'
-
+set -as terminal-features ',konsole-direct:clipboard'
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 run '~/.tmux/plugins/tpm/tpm'
