Ah yeah now we rolling in the mux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,8 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux#latest'
-set -as terminal-features ',konsole-direct:clipboard'
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
 run '~/.tmux/plugins/tpm/tpm'
