Fixed refresh rate, added some stuff

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,9 +22,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, 1920x1080, 0x0, 1
-monitor = DP-3, 1920x1080, 1920x0, 1
-monitor = DP-2, 1920x1080, -1920x0, 1
+monitor = DP-1, 1920x1080@144, 0x0, 1
+monitor = DP-3, 1920x1080@144, 1920x0, 1
+monitor = DP-2, 1920x1080@144, -1920x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -35,7 +35,7 @@ monitor = DP-2, 1920x1080, -1920x0, 1
 # Set programs that you use
 $terminal = ghostty
 $fileManager = dolphin
-$menu = rofi -show combi
+$menu = ~/.config/rofi/launchers/type-1/launcher.sh
 
 
 #################
@@ -86,6 +86,10 @@ general {
     allow_tearing = false
 
     layout = dwindle
+}
+
+debug {
+  full_cm_proto=true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
