--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,8 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, 1920x1080@144, 0x0, 1
-monitor = DP-2, 1920x1080@144, -1920x0, 1
+monitor = DP-1, 3440x1440@180, 0x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -246,6 +245,18 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Move windows with mainMod + SHIFT + Left/Right/Up/down
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
+# Move windows with mainMod + SHIFT + Left/Right/Up/down
+bind = $mainMod CTRL, left, resizeactive, -10 0
+bind = $mainMod CTRL, right, resizeactive, 10 0
+bind = $mainMod CTRL, up, resizeactive, 0 -10
+bind = $mainMod CTRL, down, resizeactive, 0 10
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
