--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,8 +44,7 @@ $menu = ~/.config/rofi/launchers/type-1/launcher.sh
 # Or execute your favorite apps at launch like this:
 
 exec-once = waybar
-exec-once = mpvpaper -o "--loop-file inf" ALL /home/ocx64/background.mp4
-
+exec-once = hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -247,16 +246,16 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Move windows with mainMod + SHIFT + Left/Right/Up/down
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, down, movewindow, d
+binde = $mainMod SHIFT, left, movewindow, l
+binde = $mainMod SHIFT, right, movewindow, r
+binde = $mainMod SHIFT, up, movewindow, u
+binde = $mainMod SHIFT, down, movewindow, d
 
 # Move windows with mainMod + SHIFT + Left/Right/Up/down
-bind = $mainMod CTRL, left, resizeactive, -10 0
-bind = $mainMod CTRL, right, resizeactive, 10 0
-bind = $mainMod CTRL, up, resizeactive, 0 -10
-bind = $mainMod CTRL, down, resizeactive, 0 10
+binde = $mainMod CTRL, left, resizeactive, -10 0
+binde = $mainMod CTRL, right, resizeactive, 10 0
+binde = $mainMod CTRL, up, resizeactive, 0 -10
+binde = $mainMod CTRL, down, resizeactive, 0 10
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
