Updated hyprland config, added type hinting to rust

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -175,7 +175,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe_create_new = false
 }
 
 # Example per-device config
